--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+<%= link_to 'Sign Out', destroy_user_session_path, 
+                        method: :delete, 
+                        class: 'btn, btn-danger' %>
 
 <%= yield %>
 
